stop horizontal scrolling

--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -8,6 +8,7 @@ body {
     padding-left: 15px;
     padding-right: 20px;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .row > [class*='col-'] {
